Fixed plain text field having visible borders while Ace is starting up

--- a/bin/resources/app/css/ace.css
+++ b/bin/resources/app/css/ace.css
@@ -2,8 +2,9 @@
 	/*font-size: 9pt;*/
 	line-height: 1.35;
 }
-#source {
-	overflow-y: scroll;
+textarea#source {
+	border: 0;
+	flex-grow: 1;
 }
 .ace_container {
 	flex-grow: 1;
